--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
-    "name": "YunoHost example app",
-    "id": "ynhexample",
+    "name": "KodExplorer",
+    "id": "kodexplorer",
     "packaging_format": 1,
     "description": {
-        "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
-        "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
+        "en": "A web based file manager,web IDE / browser based code editor",
+        "fr": "Un explorateur de fichiers, EDI et editeur de code web."
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
-    "license": "free",
+    "version": "4.39~ynh1",
+    "url": "http://kodcloud.com/",
+    "license": "GPL-3.0",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com",
-        "url": "http://example.com"
+        "name": "donotos",
+        "email": "donotos@example.com",
     },
     "requirements": {
         "yunohost": ">= 3.5"
@@ -21,7 +20,6 @@
     "services": [
         "nginx",
         "php7.0-fpm",
-        "mysql"
     ],
     "arguments": {
         "install" : [
@@ -29,8 +27,8 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for ynhexample",
-                    "fr": "Choisissez un nom de domaine pour ynhexample"
+                    "en": "Choose a domain name for KodExplorer",
+                    "fr": "Choisissez un nom de domaine pour KodExplorer"
                 },
                 "example": "example.com"
             },
@@ -38,11 +36,11 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for ynhexample",
-                    "fr": "Choisissez un chemin pour ynhexample"
+                    "en": "Choose a path for KodExplorer",
+                    "fr": "Choisissez un chemin pour KodExplorer"
                 },
-                "example": "/example",
-                "default": "/example"
+                "example": "/kodexplorer",
+                "default": "/kodexplorer"
             },
             {
                 "name": "admin",
@@ -61,29 +59,6 @@
                     "fr": "Est-ce une application publique ?"
                 },
                 "default": true
-            },
-            {
-                "name": "language",
-                "type": "string",
-                "ask": {
-                    "en": "Choose the application language",
-                    "fr": "Choisissez la langue de l'application"
-                },
-                "choices": ["fr", "en"],
-                "default": "fr"
-            },
-            {
-                "name": "password",
-                "type": "password",
-                "ask": {
-                    "en": "Set the administrator password",
-                    "fr": "Définissez le mot de passe administrateur"
-                },
-                "help": {
-                    "en": "Use the help field to add an information for the admin about this question.",
-                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
-                },
-                "example": "Choose a password"
             }
         ]
     }
